# Learning-crypto

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  My_own_cryptocurrency.sln  test_wallets.txt
My_own_cryptocurrency/: CMakeLists.txt  ClassDiagram.cd  DB_operations.cpp  DB_operations.h  MerkleTree_sha256.cpp  MerkleTree_sha256.h  My_own_cryptocurrency.cpp  My_own_cryptocurrency.vcxproj  My_own_cryptocurrency.vcxproj.filters  Network.cpp  Network.h  Node.cpp  Node.h  Structures.cpp  Structures.h  Tools.cpp  Tools.h  User1.ec.der  User2.ec.der  User3.ec.der  User4.ec.der  Wallet.cpp  Wallet.h  after.txt  before.txt  block_test1.txt  blockchain0.db  blockchain_User1.db  blockchain_User2.db  my_blockchain.db  peter.ec.der  private.ec.der
cryptopp850/: cryptest.vcxproj  cryptlib.vcxproj
sqlite-amalgamation-3360000/: CMakeLists.txt
sqlite-amalgamation-3360000/win-build/: ALL_BUILD.vcxproj  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sqlite3-shell.vcxproj  sqlite3-shell.vcxproj.filters  sqlite3.sln  sqlite3.vcxproj  sqlite3.vcxproj.filters
sqlite-amalgamation-3360000/windows-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  sqlite3-shell.vcxproj  sqlite3-shell.vcxproj.filters  sqlite3.sln  sqlite3.vcxproj  sqlite3.vcxproj.filters
